Brain building version 2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
+ddgs
 dotenv
+PyPDF2
 pyttsx3
 PyAudio
+openpyxl
 selenium
+watchdog
+pyperclip
 playsound
 wikipedia
+faiss-cpu
+python-docx
+python-pptx
+pygetwindow
 wolframalpha
 opencv-python
 SpeechRecognition
 google-generativeai
-mysql-connector-python
 sentence-transformers
-faiss-cpu
-PyPDF2
-python-docx
-python-pptx
-openpyxl
-pyperclip
-pygetwindow
+mysql-connector-python
